--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <title>Number Guesser</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
@@ -11,7 +12,7 @@
       <header>
         <h1>Number Guesser!</h1>
       </header>
-      
+
       <div class="rounds">
         <p class="round-label">Round <span id="round-number">1</span></p>
         <p class="guess-label">Target Number: <span id="target-number">?</span></p>
@@ -45,7 +46,7 @@
       </div>
 
     </div>
-    
+
     <div class="instructions">
       <div class="instruction">
         <h3>Step 1</h3>
