Add random message script

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -12,13 +12,13 @@
             <div class="row">
               
               <div class="text">
-                <h3>Random Te Ching</h3>
+                <h3>Dao Drip</h3>
                 
               </div> 
               <div class="control">
                 <button class="random">random</button>
-                <button class="inc">+</button>
-                <button class="dec">-</button>
+                <button class="inc">next</button>
+                <button class="dec">back</button>
               </div>
             </div>
             <div class="row">
