--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>HTML cheatz</title>
         <link rel="stylesheet" href="./styles.css" type="text/css">
@@ -36,7 +36,7 @@
                         <td><span class="code">&lt;html&gt;</span></td>
                         <td>Document wrapper</td>
                         <td>Initial parent</td>
-                        <td>Preceded by declaration <strong>&lt;!DOCTYPE html&gt;</strong></td>
+                        <td>Include <strong>lang="en"</strong> attribute. Preceded by declaration <strong>&lt;!DOCTYPE html&gt;</strong>.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;head&gt;</span></td>
@@ -48,7 +48,7 @@
                         <td><span class="code">&lt;meta&gt;</span></td>
                         <td>Page attributes</td>
                         <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>http-equiv="Content-Type" content="text/html; charset=UTF-8"</strong></td>
+                        <td>Include <strong>http-equiv="Content-Type" content="text/html; charset=UTF-8"</strong> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;title&gt;</span></td>
@@ -60,7 +60,7 @@
                         <td><span class="code">&lt;link&gt;</span></td>
                         <td>Linking stylesheets, scripts</td>
                         <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>rel="stylesheet" type="text/css"</strong></td>
+                        <td>Include <strong>rel="stylesheet" type="text/css"</strong> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;script&gt;</span></td>
@@ -84,7 +84,7 @@
                         <td><span class="code">&lt;nav&gt;</span></td>
                         <td>Navigation</td>
                         <td>Within <strong>&lt;header&gt;</strong></td>
-                        <td>Links setup as <strong>&lt;ul&gt;</strong> + <strong>&lt;li&gt;</strong></td>
+                        <td>Links setup as <strong>&lt;ul&gt;</strong> + <strong>&lt;li&gt;</strong>.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;main&gt;</span></td>
@@ -96,7 +96,7 @@
                         <td><span class="code">&lt;section&gt;</span></td>
                         <td>Blocks of content</td>
                         <td>Between <strong>&lt;header&gt;</strong> and <strong>&lt;footer&gt;</strong></td>
-                        <td>Set unique <strong>id="name"</strong> attribute for nav</td>
+                        <td>Set unique <strong>id="name"</strong> attribute for nav.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;div&gt;</span></td>
