--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <main>
-                <h1>Pseudo setup guide, learning tool, memory burner for:</h1>
+                <h1>Code file setup guide, learning tool, memory burner for:</h1>
             </main>
             <nav>
                 <ul>
@@ -19,6 +19,10 @@
         </header>
         <div id="top-comment">
             <p>A beginner's cheatsheet arranged and annotated for no-bs construction of <em>basic</em> site files. Feel free to suggest edits on <a class="author" href="https://github.com/ptrrdrck" target="_blank">GitHub</a>.</p>
+            <p><label>c</label> = copy preceding <span class="code-inline">text</span></p>
+            <!-- <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
+                Copy to clipboard
+            </button> -->
         </div>
         <section id="html">
             <h2>HTML5</h2>
@@ -36,78 +40,78 @@
                         <td><span class="code">&lt;html&gt;</span></td>
                         <td>Document wrapper</td>
                         <td>Initial parent</td>
-                        <td>Include <strong>lang="en"</strong> attribute. Preceded by declaration <strong>&lt;!DOCTYPE html&gt;</strong>.</td>
+                        <td>Include <span class="code-inline">lang="en"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">lang="en"</textarea></label> attribute. Preceded by declaration <span class="code-inline">&lt;!DOCTYPE html&gt;</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">&lt;!DOCTYPE html&gt;</textarea></label>.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;head&gt;</span></td>
                         <td>Undisplayed (meta) page info</td>
-                        <td>Within <strong>&lt;html&gt;</strong>, above <strong>&lt;body&gt;</strong></td>
+                        <td>Within <span class="code-inline">&lt;html&gt;</span>, above <span class="code-inline">&lt;body&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;meta&gt;</span></td>
                         <td>Page attributes</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>http-equiv="Content-Type" content="text/html; charset=UTF-8"</strong> attributes.</td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
+                        <td>Include <span class="code-inline">http-equiv="Content-Type" content="text/html; charset=UTF-8"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">http-equiv="Content-Type" content="text/html; charset=UTF-8"</textarea></label> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;title&gt;</span></td>
                         <td>Browser tab page title</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;link&gt;</span></td>
                         <td>Linking stylesheets, scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>rel="stylesheet" type="text/css"</strong> attributes.</td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
+                        <td>Include <span class="code-inline">rel="stylesheet" type="text/css"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">rel="stylesheet" type="text/css"</textarea></label> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;script&gt;</span></td>
                         <td>Inline scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong>, or end of <strong>&lt;body&gt;</strong></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span>, or end of <span class="code-inline">&lt;body&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;body&gt;</span></td>
                         <td>Page content wrapper</td>
-                        <td>Below <strong>&lt;head&gt;</strong></td>
+                        <td>Below <span class="code-inline">&lt;head&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;header&gt;</span></td>
                         <td>Leading content</td>
-                        <td>Below <strong>&lt;body&gt;</strong></td>
+                        <td>Below <span class="code-inline">&lt;body&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;nav&gt;</span></td>
                         <td>Navigation</td>
-                        <td>Within <strong>&lt;header&gt;</strong></td>
-                        <td>Links setup as <strong>&lt;ul&gt;</strong> + <strong>&lt;li&gt;</strong>.</td>
+                        <td>Within <span class="code-inline">&lt;header&gt;</span></td>
+                        <td>Links setup as <span class="code-inline">&lt;ul&gt;</span> + <span class="code-inline">&lt;li&gt;</span>.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;main&gt;</span></td>
-                        <td>Banner image/text</strong></td>
-                        <td>Within <strong>&lt;header&gt;</strong></td>
+                        <td>Banner image/text</td>
+                        <td>Within <span class="code-inline">&lt;header&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;section&gt;</span></td>
                         <td>Blocks of content</td>
-                        <td>Between <strong>&lt;header&gt;</strong> and <strong>&lt;footer&gt;</strong></td>
-                        <td>Set unique <strong>id="name"</strong> attribute for nav.</td>
+                        <td>Between <span class="code-inline">&lt;header&gt;</span> and <span class="code-inline">&lt;footer&gt;</span></td>
+                        <td>Set unique <span class="code-inline">id="name"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">id="name"</textarea></label> attribute for nav.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;div&gt;</span></td>
                         <td>One-off blocks of content</td>
-                        <td>Within <strong>&lt;body&gt;</strong></td>
+                        <td>Within <span class="code-inline">&lt;body&gt;</span></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td class="last-row"><span class="code">&lt;footer&gt;</span></td>
                         <td class="last-row">Helpful page info</td>
-                        <td class="last-row">End of <strong>&lt;body&gt;</strong></td>
+                        <td class="last-row">End of <span class="code-inline">&lt;body&gt;</span></td>
                         <td class="last-row"></td>
                     </tr>
                 </tbody>
@@ -119,137 +123,23 @@
         <br><br><br>
         <section id="css">
             <h2>CSS</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <td>Tag</td>
-                        <td>Usage</td>
-                        <td>Location</td>
-                        <td>Notes</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span class="code">&lt;html&gt;</span></td>
-                        <td>Document wrapper</td>
-                        <td>Initial parent</td>
-                        <td>Preceded by declaration <strong>&lt;!DOCTYPE html&gt;</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;head&gt;</span></td>
-                        <td>Undisplayed (meta) page info</td>
-                        <td>Within <strong>&lt;html&gt;</strong>, above <strong>&lt;body&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;meta&gt;</span></td>
-                        <td>Page attributes</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>http-equiv="Content-Type" content="text/html; charset=UTF-8"</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;title&gt;</span></td>
-                        <td>Browser tab page title</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;link&gt;</span></td>
-                        <td>Linking stylesheets, scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>rel="stylesheet" type="text/css"</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;script&gt;</span></td>
-                        <td>Inline scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong>, or end of <strong>&lt;body&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;body&gt;</span></td>
-                        <td>Page content wrapper</td>
-                        <td>Below <strong>&lt;head&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td class="last-row"><span class="code">&lt;footer&gt;</span></td>
-                        <td class="last-row">Helpful page info</td>
-                        <td class="last-row">End of <strong>&lt;body&gt;</strong></td>
-                        <td class="last-row"></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td colspan="4">Last updated July 2021.</td>
-                </tfoot>
-            </table>
         </section>
         <br><br><br>
         <section id="js">
             <h2>JS</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <td>Tag</td>
-                        <td>Usage</td>
-                        <td>Location</td>
-                        <td>Notes</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span class="code">&lt;html&gt;</span></td>
-                        <td>Document wrapper</td>
-                        <td>Initial parent</td>
-                        <td>Preceded by declaration <strong>&lt;!DOCTYPE html&gt;</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;head&gt;</span></td>
-                        <td>Undisplayed (meta) page info</td>
-                        <td>Within <strong>&lt;html&gt;</strong>, above <strong>&lt;body&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;meta&gt;</span></td>
-                        <td>Page attributes</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>http-equiv="Content-Type" content="text/html; charset=UTF-8"</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;title&gt;</span></td>
-                        <td>Browser tab page title</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;link&gt;</span></td>
-                        <td>Linking stylesheets, scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong></td>
-                        <td>Include <strong>rel="stylesheet" type="text/css"</strong></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;script&gt;</span></td>
-                        <td>Inline scripts</td>
-                        <td>Within <strong>&lt;head&gt;</strong>, or end of <strong>&lt;body&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><span class="code">&lt;body&gt;</span></td>
-                        <td>Page content wrapper</td>
-                        <td>Below <strong>&lt;head&gt;</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td class="last-row"><span class="code">&lt;footer&gt;</span></td>
-                        <td class="last-row">Helpful page info</td>
-                        <td class="last-row">End of <strong>&lt;body&gt;</strong></td>
-                        <td class="last-row"></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td colspan="4">Last updated July 2021.</td>
-                </tfoot>
-            </table>
         </section>
         <br><br><br>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
+        <script>
+            var clipboard = new ClipboardJS('.btn');
+      
+            clipboard.on('success', function (e) {
+              console.log(e);
+            });
+      
+            clipboard.on('error', function (e) {
+              console.log(e);
+            });
+          </script> -->
     </body>
 </html>
