Additional HTML tags covered

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <title>HTML cheatz</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
         <header>
             <main>
-                <h1>Code file setup guide, learning tool, memory burner for:</h1>
+                <h1>Simple code writing guide for</h1>
             </main>
             <nav>
                 <ul>
@@ -16,107 +17,116 @@
                     <li><a href="#js">JS</a></li>
                 </ul>
             </nav>
+            <main>
+                <h1>files.</h1>
+            </main>
         </header>
-        <div id="top-comment">
-            <p>A beginner's cheatsheet arranged and annotated for no-bs construction of <em>basic</em> site files. Feel free to suggest edits on <a class="author" href="https://github.com/ptrrdrck" target="_blank">GitHub</a>.</p>
-            <p><label>c</label> = copy preceding <span class="code-inline">text</span></p>
+        <aside>
+            <p>A beginner's cheatsheet arranged and annotated for no-bs writing of <strong><em>basic</em></strong> site files. Feel free to suggest edits on <a class="aside-link" href="https://github.com/ptrrdrck" target="_blank">GitHub</a>.</p>
+            <p><label class="copier" class="copier">c</label class="copier"> = copy preceding <span class="code-inline">text</span></p>
             <!-- <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
                 Copy to clipboard
             </button> -->
-        </div>
+        </aside>
         <section id="html">
             <h2>HTML5</h2>
             <table>
                 <thead>
                     <tr>
                         <td>Tag</td>
-                        <td>Usage</td>
-                        <td>Location</td>
-                        <td>Notes</td>
+                        <td>Place...</td>
+                        <td>Details</td>
+                        <td>Purpose</td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><span class="code">&lt;html&gt;</span></td>
-                        <td>Document wrapper</td>
-                        <td>Initial parent</td>
-                        <td>Include <span class="code-inline">lang="en"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">lang="en"</textarea></label> attribute. Preceded by declaration <span class="code-inline">&lt;!DOCTYPE html&gt;</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">&lt;!DOCTYPE html&gt;</textarea></label>.</td>
+                        <td class="first-row"><span class="code">&lt;html&gt;</span></td>
+                        <td class="first-row">Below initial <span class="code-inline">&lt;!DOCTYPE html&gt;</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">&lt;!DOCTYPE html&gt;</textarea></label class="copier"> declaration.</td>
+                        <td class="first-row">Include <span class="code-inline">lang="en"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">lang="en"</textarea></label class="copier"> attribute.</td>
+                        <td class="first-row">Document wrapper</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;head&gt;</span></td>
-                        <td>Undisplayed (meta) page info</td>
-                        <td>Within <span class="code-inline">&lt;html&gt;</span>, above <span class="code-inline">&lt;body&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;html&gt;</span>, above <span class="code-inline">&lt;body&gt;</span>.</td>
                         <td></td>
+                        <td>Undisplayed (meta) page info</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;meta&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span>.</td>
+                        <td>Include <span class="code-inline">http-equiv="Content-Type" content="text/html; charset=UTF-8"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">http-equiv="Content-Type" content="text/html; charset=UTF-8"</textarea></label class="copier"> attributes.</td>
                         <td>Page attributes</td>
-                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
-                        <td>Include <span class="code-inline">http-equiv="Content-Type" content="text/html; charset=UTF-8"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">http-equiv="Content-Type" content="text/html; charset=UTF-8"</textarea></label> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;title&gt;</span></td>
-                        <td>Browser tab page title</td>
-                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span>.</td>
                         <td></td>
+                        <td>Browser tab page title</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;link&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span>.</td>
+                        <td>Include <span class="code-inline">rel="stylesheet" type="text/css"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">rel="stylesheet" type="text/css"</textarea></label class="copier"> attributes.</td>
                         <td>Linking stylesheets, scripts</td>
-                        <td>Within <span class="code-inline">&lt;head&gt;</span></td>
-                        <td>Include <span class="code-inline">rel="stylesheet" type="text/css"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">rel="stylesheet" type="text/css"</textarea></label> attributes.</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;script&gt;</span></td>
-                        <td>Inline scripts</td>
-                        <td>Within <span class="code-inline">&lt;head&gt;</span>, or end of <span class="code-inline">&lt;body&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;head&gt;</span>, or end of <span class="code-inline">&lt;body&gt;</span>.</td>
                         <td></td>
+                        <td>Inline scripts</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;body&gt;</span></td>
-                        <td>Page content wrapper</td>
-                        <td>Below <span class="code-inline">&lt;head&gt;</span></td>
+                        <td>Below <span class="code-inline">&lt;head&gt;</span>.</td>
                         <td></td>
+                        <td>Page content wrapper</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;header&gt;</span></td>
-                        <td>Leading content</td>
-                        <td>Below <span class="code-inline">&lt;body&gt;</span></td>
+                        <td>Below <span class="code-inline">&lt;body&gt;</span>.</td>
                         <td></td>
+                        <td>Leading content</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;nav&gt;</span></td>
-                        <td>Navigation</td>
-                        <td>Within <span class="code-inline">&lt;header&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;header&gt;</span>.</td>
                         <td>Links setup as <span class="code-inline">&lt;ul&gt;</span> + <span class="code-inline">&lt;li&gt;</span>.</td>
+                        <td>Navigation</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;main&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;header&gt;</span>.</td>
+                        <td>Good place for the <span class="code-inline">&lt;h1&gt;</span> and/or logo.</td>
                         <td>Banner image/text</td>
-                        <td>Within <span class="code-inline">&lt;header&gt;</span></td>
-                        <td></td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;section&gt;</span></td>
+                        <td>Between <span class="code-inline">&lt;header&gt;</span> and <span class="code-inline">&lt;footer&gt;</span>.</td>
+                        <td>Set a unique <span class="code-inline">id="name"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">id="name"</textarea></label class="copier"> attribute for navigation.</td>
                         <td>Blocks of content</td>
-                        <td>Between <span class="code-inline">&lt;header&gt;</span> and <span class="code-inline">&lt;footer&gt;</span></td>
-                        <td>Set unique <span class="code-inline">id="name"</span><label>c<textarea onclick="this.select(); document.execCommand('copy');">id="name"</textarea></label> attribute for nav.</td>
+                    </tr>
+                    <tr>
+                        <td><span class="code">&lt;aside&gt;</span></td>
+                        <td>Between <span class="code-inline">&lt;header&gt;</span> and <span class="code-inline">&lt;footer&gt;</span>.</td>
+                        <td></td>
+                        <td>Non-primary blocks of content</td>
                     </tr>
                     <tr>
                         <td><span class="code">&lt;div&gt;</span></td>
-                        <td>One-off blocks of content</td>
-                        <td>Within <span class="code-inline">&lt;body&gt;</span></td>
+                        <td>Within <span class="code-inline">&lt;body&gt;</span>.</td>
                         <td></td>
+                        <td>One-off blocks of structure-content</td>
                     </tr>
                     <tr>
                         <td class="last-row"><span class="code">&lt;footer&gt;</span></td>
-                        <td class="last-row">Helpful page info</td>
-                        <td class="last-row">End of <span class="code-inline">&lt;body&gt;</span></td>
+                        <td class="last-row">End of <span class="code-inline">&lt;body&gt;</span>.</td>
                         <td class="last-row"></td>
+                        <td class="last-row">Helpful page info</td>
                     </tr>
                 </tbody>
                 <tfoot>
-                    <td colspan="4">Last updated July 2021.</td>
+                    <td colspan="4"><em>Last updated July 2021.</em></td>
                 </tfoot>
             </table>
         </section>
