Fix class spelling in label tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <aside>
             <p>A beginner's cheatsheet arranged and annotated for no-bs writing of <strong><em>basic</em></strong> site files. Feel free to suggest edits on <a class="aside-link" href="https://github.com/ptrrdrck" target="_blank">GitHub</a>.</p>
-            <p><label class="copier" class="copier">c</label class="copier"> = copy preceding <span class="code-inline">text</span></p>
+            <p><label class="copier">c</label> = copy preceding <span class="code-inline">text</span></p>
             <!-- <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
                 Copy to clipboard
             </button> -->
@@ -42,8 +42,8 @@
                 <tbody>
                     <tr>
                         <td class="first-row"><span class="code">&lt;html&gt;</span></td>
-                        <td class="first-row">Below initial <span class="code-inline">&lt;!DOCTYPE html&gt;</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">&lt;!DOCTYPE html&gt;</textarea></label class="copier"> declaration.</td>
-                        <td class="first-row">Include <span class="code-inline">lang="en"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">lang="en"</textarea></label class="copier"> attribute.</td>
+                        <td class="first-row">Below initial <span class="code-inline">&lt;!DOCTYPE html&gt;</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">&lt;!DOCTYPE html&gt;</textarea></label> declaration.</td>
+                        <td class="first-row">Include <span class="code-inline">lang="en"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">lang="en"</textarea></label> attribute.</td>
                         <td class="first-row">Document wrapper</td>
                     </tr>
                     <tr>
@@ -55,7 +55,7 @@
                     <tr>
                         <td><span class="code">&lt;meta&gt;</span></td>
                         <td>Within <span class="code-inline">&lt;head&gt;</span>.</td>
-                        <td>Include <span class="code-inline">http-equiv="Content-Type" content="text/html; charset=UTF-8"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">http-equiv="Content-Type" content="text/html; charset=UTF-8"</textarea></label class="copier"> attributes.</td>
+                        <td>Include <span class="code-inline">http-equiv="Content-Type" content="text/html; charset=UTF-8"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">http-equiv="Content-Type" content="text/html; charset=UTF-8"</textarea></label> attributes.</td>
                         <td>Page attributes</td>
                     </tr>
                     <tr>
@@ -67,7 +67,7 @@
                     <tr>
                         <td><span class="code">&lt;link&gt;</span></td>
                         <td>Within <span class="code-inline">&lt;head&gt;</span>.</td>
-                        <td>Include <span class="code-inline">rel="stylesheet" type="text/css"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">rel="stylesheet" type="text/css"</textarea></label class="copier"> attributes.</td>
+                        <td>Include <span class="code-inline">rel="stylesheet" type="text/css"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">rel="stylesheet" type="text/css"</textarea></label> attributes.</td>
                         <td>Linking stylesheets, scripts</td>
                     </tr>
                     <tr>
@@ -103,7 +103,7 @@
                     <tr>
                         <td><span class="code">&lt;section&gt;</span></td>
                         <td>Between <span class="code-inline">&lt;header&gt;</span> and <span class="code-inline">&lt;footer&gt;</span>.</td>
-                        <td>Set a unique <span class="code-inline">id="name"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">id="name"</textarea></label class="copier"> attribute for navigation.</td>
+                        <td>Set a unique <span class="code-inline">id="name"</span><label class="copier">c<textarea onclick="this.select(); document.execCommand('copy');">id="name"</textarea></label> attribute for navigation.</td>
                         <td>Blocks of content</td>
                     </tr>
                     <tr>
