Change page title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML cheatz</title>
+        <title>Simple site code writing cheatsheet</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
         <header>
             <main>
-                <h1>Simple code writing guide for</h1>
+                <h1>Simple code writing guide for basic</h1>
             </main>
             <nav>
                 <ul>
