Add page footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </main>
         </header>
         <aside>
-            <p>A beginner's cheatsheet arranged and annotated for no-bs writing of <strong><em>basic</em></strong> site files. Feel free to suggest edits on <a class="aside-link" href="https://github.com/ptrrdrck" target="_blank">GitHub</a>.</p>
+            <p>A beginner's cheatsheet arranged and annotated for no-bs writing of <strong><em>basic</em></strong> site files. Feel free to suggest edits and open pull requests on <a class="aside-link" href="https://github.com/ptrrdrck/cheatsheet/issues" target="_blank">GitHub</a>.</p>
             <p><label class="copier"></label> = copy preceding <span class="code-inline">text</span></p>
         </aside>
         <section id="html">
@@ -136,5 +136,9 @@
             <h2>JS</h2>
         </section>
         <br><br><br>
+        <footer>
+            <br><br><br>
+            <a href="https://twitter.com/ptrrdrck" target="_blank"><img src="./images/tw.png" height="36" /></a><a href="https://github.com/ptrrdrck" target="_blank"><img src="./images/gh.png" height="36" /></a>
+        </footer>
     </body>
 </html>
