--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Dao Drip</title>
-        <link href="style.css" rel="stylesheet">
-    </head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Dao Drip</title>
+    <link href="./style.css" rel="stylesheet">
+  </head>
 
-    <body>
-        <div class="container">
-            <div class="row">
-              
-              <div class="text">
-                <h3>Dao Drip</h3>
-                
-              </div> 
-              <div class="control">
-                <button class="random">random</button>
-                <button class="inc">next</button>
-                <button class="dec">back</button>
-              </div>
-            </div>
-            <div class="row">
-              <h4>Chapter <span class="ch"></span></h4>
-              <p class="verse"></p>
-            </div>
-        </div>
+  <body>
+      <h3>dao</h3>
+      <button id="drip">drip</button>
+      <p id="display">Waiting...</p>
 
-        <script type="text/javascript" src="script.js"></script>
-    </body>
+    <script src="./script.js" type="text/javascript"></script>
+  </body>
 </html>
