--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -8,10 +8,11 @@
   </head>
 
   <body>
-      <h3>dao</h3>
+    <header>
+      <h1>dao</h1>
       <button id="drip">drip</button>
-      <p id="display">Waiting...</p>
-
+    </header>
+    <p id="display">Waiting...</p>
     <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
