--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -12,7 +12,7 @@
       <h1>dao</h1>
       <button id="drip">drip</button>
     </header>
-    <p id="display">Waiting...</p>
+    <p id="display" class="fade-in">Waiting...</p>
     <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
