--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -10,9 +10,13 @@
   <body>
     <header>
       <h1>dao</h1>
-      <button id="drip">drip</button>
+      <button id="drip" type="submit" onClick="refreshPage()">drip</button>
+      <!-- <button id="drip">drip</button> -->
     </header>
     <p id="display" class="fade-in">Waiting...</p>
+    <footer>
+      <img src="./img/yin-yang-solid.svg" />
+    </footer>
     <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
