--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -11,7 +11,9 @@
     <header>
       <h1>dao</h1>
       <button id="drip" class="fade-in" type="submit" onClick="refreshPage()">drip</button>
-      <!-- <button id="drip">drip</button> -->
+      <!-- 
+      <button id="drip">drip</button>
+      -->
     </header>
     <p id="display" class="fade-in">Waiting...</p>
     <footer>
