Remove drip button fade-in animation

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>dao</h1>
-      <button id="drip" class="fade-in" type="submit" onClick="refreshPage()">drip</button>
+      <button id="drip" type="submit" onClick="refreshPage()">drip</button>
       <!-- 
       <button id="drip">drip</button>
       -->
