Add project links section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <header>
       <h1>Hello!</h1>
     </header>
-    <p id="display" class="fade-in">Waiting...</p>
-    <a href="./mixed-messages/">"Dao Drip" a.k.a. mixed-messages</a>
+    <section id="project-links">
+    <p id="display" class="fade-in"></p>
+    <a class="fade-in" href="./mixed-messages/">"Dao Drip" a.k.a. mixed-messages</a>
+    <a class="fade-in" href="./number-guesser/">number-guesser</a>
+    </section>
     <footer>
-      <img src="" />
     </footer>
     <!--
     <script src="./script.js" type="text/javascript"></script>
