--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Hello!</h1>
     </header>
     <section id="project-links">
-    <p id="display" class="fade-in"></p>
+    <p id="about" class="fade-in">These are learning projects built for the Codecademy Full-Stack Engineer program. (most recent first)</p>
     <a class="fade-in" href="./mixed-messages/">"Dao Drip" a.k.a. mixed-messages</a>
     <a class="fade-in" href="./number-guesser/">number-guesser</a>
     </section>
