Additional project links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <section id="project-links">
     <p id="about" class="fade-in">These are learning projects built for the Codecademy Full-Stack Engineer program. (most recent first)</p>
     <a class="fade-in" href="./mixed-messages/">"Dao Drip" a.k.a. mixed-messages</a>
+    <a class="fade-in" href="./mystery-organism/main.js">mystery-organism (text/js)</a>
+    <a class="fade-in" href="./credit-card-checker/main.js">credit-card-checker (text/js)</a>
     <a class="fade-in" href="./number-guesser/">number-guesser</a>
+
     </section>
     <footer>
     </footer>
