About section content updates

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <main>
-                <h1>Simple code writing guide for basic</h1>
+                <h1>Simple setup cheatsheet for basic</h1>
             </main>
             <nav>
                 <ul>
@@ -22,7 +22,7 @@
             </main>
         </header>
         <aside>
-            <p>A beginner's cheatsheet arranged and annotated for no-bs writing of <strong><em>basic</em></strong> site files. Feel free to suggest edits and open pull requests on <a class="aside-link" href="https://github.com/ptrrdrck/cheatsheet/issues" target="_blank">GitHub</a>.</p>
+            <p>A beginner's guide arranged and annotated for easy writing of <strong><em>basic</em></strong> site files. I would like to add a column of relational links between items here to incorporate a choose-your-own-adventure option (e.g. "I want to add an image now.") Suggestions are welcome on <a class="aside-link" href="https://github.com/ptrrdrck/cheatsheet/issues" target="_blank">GitHub</a>.</p>
             <p class="fyi"><label class="copier"></label> = copy preceding <span class="code-inline">text</span></p>
         </aside>
         <section id="html">
@@ -182,7 +182,7 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Tag</td>
+                        <td>Element</td>
                         <td>Place...</td>
                         <td>Details</td>
                         <td>Purpose</td>
@@ -190,32 +190,32 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="first-row standard"><span class="code">*</span></td>
-                        <td class="first-row standard">Below initial <span class="code-inline">@charset "UTF-8";</span><label class="copier"><textarea onclick="this.select(); document.execCommand('copy');">@charset "UTF-8";</textarea></label> declaration.</td>
-                        <td class="first-row details">Include <span class="code-inline">margin: 0; padding: 0; box-sizing: border-box;</span><label class="copier"><textarea onclick="this.select(); document.execCommand('copy');">margin: 0; padding: 0; box-sizing: border-box;</textarea></label> resets.</td>
+                        <td class="first-row standard"><span class="code">let</span></td>
+                        <td class="first-row standard">Begin most <span class="code-inline">script</span><label class="copier"><textarea onclick="this.select(); document.execCommand('copy');">@charset "UTF-8";</textarea></label> with a variable declaration.</td>
+                        <td class="first-row details">Include <span class="code-inline">in progress</span><label class="copier"><textarea onclick="this.select(); document.execCommand('copy');">margin: 0; padding: 0; box-sizing: border-box;</textarea></label> resets.</td>
                         <td class="first-row standard">Global, all elements. Resets for browser defaults.</td>
                     </tr>
                     <tr>
-                        <td class="standard"><span class="code">colors</span></td>
-                        <td class="standard">Format as <span class="code-inline">hsla(h, s, l, a);</span>.</td>
+                        <td class="standard"></td>
+                        <td class="standard"></td>
                         <td class="details"></td>
                         <td class="standard"></td>
                     </tr>
                     <tr>
-                        <td class="standard"><span class="code">fonts</span></td>
-                        <td class="standard">Google fonts <span class="code-inline">wait</span>.</td>
-                        <td class="details">Include <span class="code-inline">wait</span><label class="copier"><textarea onclick="this.select(); document.execCommand('copy');">wait</textarea></label> attributes.</td>
                         <td class="standard"></td>
-                    </tr>
-                    <tr>
-                        <td class="standard"><span class="code">text styles</span></td>
-                        <td class="standard">Within <span class="code-inline">font-weight</span>.</td>
+                        <td class="standard"></td>
                         <td class="details"></td>
                         <td class="standard"></td>
                     </tr>
                     <tr>
-                        <td class="last-row standard"><span class="code">wait</span></td>
-                        <td class="last-row standard">End of <span class="code-inline">wait</span>.</td>
+                        <td class="standard"></td>
+                        <td class="standard"></td>
+                        <td class="details"></td>
+                        <td class="standard"></td>
+                    </tr>
+                    <tr>
+                        <td class="last-row standard"></td>
+                        <td class="last-row standard"></td>
                         <td class="last-row details"></td>
                         <td class="last-row standard"></td>
                     </tr>
