Add back button and emojis

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     </header>
     <p id="about" class="fade-in">These are learning projects built for the Codecademy Full-Stack Engineer program. (most recent first)</p>
     <section id="project-links">
-    <a class="fade-in" href="./mixed-messages/">"Dao Drip" a.k.a. mixed-messages</a>
-    <a class="fade-in" href="./cheatsheet/">cheatsheet</a>
-    <a class="fade-in" href="./excursion/">excursion</a>
-    <a class="fade-in" href="./mystery-organism/main.js">mystery-organism (text/js)</a>
-    <a class="fade-in" href="./credit-card-checker/main.js">credit-card-checker (text/js)</a>
-    <a class="fade-in" href="./number-guesser/">number-guesser</a>
+      <a class="fade-in" href="./mixed-messages/">"Dao Drip" (mixed-messages)<span class="emoji">&#128167;</span></a>
+      <a class="fade-in" href="./cheatsheet/">cheatsheet<span class="emoji">&#129296;</span></a>
+      <a class="fade-in" href="./excursion/">excursion<span class="emoji">&#128506;</span></a>
+      <a class="fade-in" href="./mystery-organism/main.js">mystery-organism (text/js)<span class="emoji">&#128300;</span></a>
+      <a class="fade-in" href="./credit-card-checker/main.js">credit-card-checker (text/js)<span class="emoji">&#128680;</span></a>
+      <a class="fade-in" href="./number-guesser/">number-guesser<span class="emoji">&#128302;</span></a>
     </section>
     <footer>
+      <a class="back" href="https://ptrrdrck.github.io/">back<span class="emoji">&#128072;</span></a>
     </footer>
     <!--
     <script src="./script.js" type="text/javascript"></script>
