About text update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <h1>Hello!</h1>
     </header>
-    <p id="about" class="fade-in">These are learning projects built for the Codecademy Full-Stack Engineer program. (most recent first)</p>
+    <p id="about" class="fade-in">a stash of learning projects (most recent first)...</p>
     <section id="project-links">
       <a class="fade-in" href="./mixed-messages/">"Dao Drip" (mixed-messages)<span class="emoji">&#128167;</span></a>
       <a class="fade-in" href="./cheatsheet/">cheatsheet<span class="emoji">&#129296;</span></a>
