Testing click count function

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -15,6 +15,9 @@
       <button id="drip">drip</button>
       -->
     </header>
+    <!--
+    <p id="counter" class="fade-in"></p>  
+    -->
     <p id="display" class="fade-in">Waiting...</p>
     <footer>
       <img src="./img/yin-yang-solid.svg" />
