--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Dao Drip</title>
     <link href="./style.css" rel="stylesheet">
   </head>
-
   <body>
     <header>
       <h1>dao</h1>
@@ -15,10 +13,12 @@
       <button id="drip">drip</button>
       -->
     </header>
-    <!--
-    <p id="counter" class="fade-in"></p>  
-    -->
-    <p id="display" class="fade-in">Waiting...</p>
+    <main>
+      <!--
+      <p id="counter" class="fade-in"></p>  
+      -->
+      <p id="display" class="fade-in">Waiting...</p>
+    </main>
     <footer>
       <img src="./img/yin-yang-solid.svg" />
     </footer>
