--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>@ptrrdrck Codecademy Projects</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>@ptrrdrck Full-Stack Engineer Coursework</title>
     <link href="./style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;700;900&display=swap" rel="stylesheet">
   </head>
-
   <body>
-    <header>
-      <h1>Hello!</h1>
+    <header class="fade-in">
+      <p id="about">a stash of learning projects (most recent first)...</p>
     </header>
-    <p id="about" class="fade-in">a stash of learning projects (most recent first)...</p>
-    <section id="project-links">
-      <a class="fade-in" href="./mixed-messages/">"Dao Drip" (mixed-messages)<span class="emoji">&#128167;</span></a>
-      <a class="fade-in" href="./cheatsheet/">cheatsheet<span class="emoji">&#129296;</span></a>
-      <a class="fade-in" href="./excursion/">excursion<span class="emoji">&#128506;</span></a>
-      <a class="fade-in" href="./mystery-organism/main.js">mystery-organism (text/js)<span class="emoji">&#128300;</span></a>
-      <a class="fade-in" href="./credit-card-checker/main.js">credit-card-checker (text/js)<span class="emoji">&#128680;</span></a>
-      <a class="fade-in" href="./number-guesser/">number-guesser<span class="emoji">&#128302;</span></a>
+    <section id="project-links" class="fade-in">
+      <a href="./mixed-messages/">"Dao Drip"<br />(Mixed Messages) <span class="emoji">&#128167;</span></a>
+      <a href="./cheatsheet/">Cheatsheet <span class="emoji">&#129296;</span></a>
+      <a href="./excursion/">Excursion <span class="emoji">&#128506;</span></a>
+      <a href="./mystery-organism/main.js">Mystery Organism (text/js) <span class="emoji">&#128300;</span></a>
+      <a href="./credit-card-checker/main.js">Credit Card Checker (text/js) <span class="emoji">&#128680;</span></a>
+      <a href="./number-guesser/">Number Guesser <span class="emoji">&#128302;</span></a>
     </section>
     <footer>
-      <a class="back" href="https://ptrrdrck.github.io/">back<span class="emoji">&#128072;</span></a>
+      <a class="button" href="https://ptrrdrck.github.io/">back<span class="emoji">&#128072;</span></a>
     </footer>
     <!--
     <script src="./script.js" type="text/javascript"></script>
