Font and link styling

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <p id="about">a stash of learning projects (most recent first)...</p>
     </header>
     <section id="project-links" class="fade-in">
-      <a href="./mixed-messages/">"Dao Drip"<br />(Mixed Messages) <span class="emoji">&#128167;</span></a>
+      <a href="./mixed-messages/">Mixed Messages<span class="emoji">&#128167;</span></a>
       <a href="./cheatsheet/">Cheatsheet <span class="emoji">&#129296;</span></a>
       <a href="./excursion/">Excursion <span class="emoji">&#128506;</span></a>
-      <a href="./mystery-organism/main.js">Mystery Organism (text/js) <span class="emoji">&#128300;</span></a>
-      <a href="./credit-card-checker/main.js">Credit Card Checker (text/js) <span class="emoji">&#128680;</span></a>
-      <a href="./number-guesser/">Number Guesser <span class="emoji">&#128302;</span></a>
+      <a href="./mystery-organism/main.js">Mystery Organism (text/js)<span class="emoji">&#128300;</span></a>
+      <a href="./credit-card-checker/main.js">Card Checker (text/js)<span class="emoji">&#128680;</span></a>
+      <a href="./number-guesser/">Number Guesser<span class="emoji">&#128302;</span></a>
     </section>
     <footer>
       <a class="button" href="https://ptrrdrck.github.io/">back<span class="emoji">&#128072;</span></a>
