Minor styling adjustments

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link href="./style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="fade-in">
-      <p id="about">a stash of learning projects (most recent first)...</p>
+    <header>
+      <p class="fade-in">a stash of learning projects (most recent first)...</p>
+      <br /><br />
     </header>
-    <section id="project-links" class="fade-in">
-      <a href="./mixed-messages/">Mixed Messages<span class="emoji">&#128167;</span></a>
-      <a href="./cheatsheet/">Cheatsheet <span class="emoji">&#129296;</span></a>
-      <a href="./excursion/">Excursion <span class="emoji">&#128506;</span></a>
-      <a href="./mystery-organism/main.js">Mystery Organism (text/js)<span class="emoji">&#128300;</span></a>
-      <a href="./credit-card-checker/main.js">Card Checker (text/js)<span class="emoji">&#128680;</span></a>
-      <a href="./number-guesser/">Number Guesser<span class="emoji">&#128302;</span></a>
+    <section id="links" class="fade-in">
+      <a href="./mixed-messages/">mixed messages</a>
+      <a href="./cheatsheet/">cheatsheet</a>
+      <a href="./excursion/">excursion</a>
+      <a href="./mystery-organism/main.js">mystery organism (text/js)</a>
+      <a href="./credit-card-checker/main.js">card checker (text/js)</a>
+      <a href="./number-guesser/">number guesser</a>
     </section>
     <footer>
       <a class="button" href="https://ptrrdrck.github.io/">back<span class="emoji">&#128072;</span></a>
