--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -22,6 +22,7 @@
     </main>
     <footer>
       <img src="./img/yin-yang-solid.svg" />
+      <a id="github-link" class="fade-in" href="https://github.com/ptrrdrck/reflect.black" target="_blank">&rarr;github</a>
     </footer>
     <script src="./script.js" type="text/javascript"></script>
   </body>
