Add footer link to about page

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -20,9 +20,12 @@
       -->
       <p id="display" class="fade-in">Waiting...</p>
     </main>
-    <footer>
+    <footer class="fade-in">
       <img src="./img/yin-yang-solid.svg" />
-      <a id="github-link" class="fade-in" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>
+      <div id="links">
+        <a href="./about.html">&rarr;about</a>
+        <a href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
+      </div>
     </footer>
     <script src="./script.js" type="text/javascript"></script>
   </body>
