--- a/mixed-messages/about.html
+++ b/mixed-messages/about.html
@@ -9,16 +9,18 @@
   <body>
     <header>
       <h1>dao</h1>
-      <a id="index" href="./index.html"><button id="drip" type="button">drip</button></a>
+      <a class="index" href="./index.html"><button id="drip" type="button">drip</button></a>
     </header>
     <main>
       <p id="display" class="fade-in">Hi friend, &#x1F601; I'm happy you are here.<br /><br />Dao Drip &#x1F4A7; came about to assist with casual study &#x1F50E; of translations of the Daodejing &#x1F4DC; (&#x1F5E3; <span class="emphasis">"Dow Duh Jeang"</span>). This simple book of  philosophical text emerged &#x1F331; from a period of oral composition over the course of several centuries &#x23F3;, and has been translated hundreds of times. Each attempt to interpret &#x1F4A1; the words of the "Old Master" is a unique manifestation &#x1F441; of a common human heritage &#x1F517; that seeks to make sense of our mysteries &#x1FA9E;.<br /><br />Many people appreciate the briefness &#x1FA83; of the text, and Dao Drip attempts to celebrate this accessible nature by selecting a single random &#x1F3B2; chapter (out of 81) for you to ponder &#x1F4AD;. Three characteristically distinct &#x1F9EC; translations of the random chapter are placed together &#x1F53A; so that we may more easily <span class="emphasis">begin</span> to surface &#x26CF; the fundamental wisdom within &#x1F573;. Their differences and similarities reveal both the individual voice(s) translating &#x1F58D; and the nuance of the original underlying source &#x26F2;.</p>
       <p class="sources">Translation &#x1F9E9; sources:<br /><br /><a href="https://terebess.hu/english/tao/mitchell.html" target="_blank">Stephen Mitchell</a><br /><br /><a href="https://terebess.hu/english/tao/gia.html" target="_blank">Gia-Fu Feng & Jane English</a><br /><br /><a href="https://terebess.hu/english/tao/addiss.html" target="_blank">Stephen Addiss & Stanley Lombardo</a></p>
     </main>
     <footer class="fade-in">
-      <img src="./img/yin-yang-solid.svg" />
+      <a class="index" href="./index.html">
+        <img src="./img/yin-yang-solid.svg" />
+      </a>
       <div id="links">
-        <a href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
+        <a class="footer-link" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
       </div>
     </footer>
   </body>
