--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -21,10 +21,12 @@
       <p id="display" class="fade-in">Waiting...</p>
     </main>
     <footer class="fade-in">
-      <img src="./img/yin-yang-solid.svg" />
+      <a class="index" href="./index.html">
+        <img src="./img/yin-yang-solid.svg" />
+      </a>
       <div id="links">
-        <a href="./about.html">&rarr;about</a>
-        <a href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
+        <a class="footer-link" href="./about.html">&rarr;about</a>
+        <a class="footer-link" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
       </div>
     </footer>
     <script src="./script.js" type="text/javascript"></script>
