--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Dao Drip</title>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -26,7 +26,7 @@
       </a>
       <div id="links">
         <a class="footer-link" href="./about.html">&rarr;about</a>
-        <a class="footer-link" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>  
+        <!--<a class="footer-link" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>-->
       </div>
     </footer>
     <script src="./script.js" type="text/javascript"></script>
